# tokenova

./: .gitignore  LICENSE.md  README.en.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: _checks.yml  ci.yml  release.yml
dev-console/: README.md  index.html  script.js  style.css
docs/: README.en.md  README.md  architecture.en.md  architecture.md  auto-update.en.md  auto-update.md  contributing.en.md  contributing.md  game-mechanics.en.md  game-mechanics.md  i18n.en.md  i18n.md  privacy.en.md  privacy.md  providers.en.md  providers.md  release-process.en.md  release-process.md  vision.en.md  vision.md
docs/references/: 00-design-modifications.md  01-star-density.md  02-interactive-universe.md
scripts/: build-dmg-background.py  whiten-tray-mac.py
src/: main.ts  onboarding.ts  styles.css  updater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  dev_console.rs  i18n.rs  lib.rs  main.rs  notifier.rs  session.rs
src-tauri/src/db/: mod.rs  schema.sql
src-tauri/src/engine/: achievements.rs  catalog.rs  codex.rs  mod.rs  nebula.rs  planets.rs  stars.rs  types.rs  universe.rs
src-tauri/src/parser/: claude_code.rs  codex_cli.rs  mod.rs
src-tauri/src/watcher/: mod.rs  opencode.rs
src/i18n/: index.ts
src/universe/: blackhole-canvas.ts  camera.ts  catalog.ts  effects.ts  interaction.ts  planet-canvas.ts  planet-mount.ts  planet-svg.ts  renderer.ts  rng.ts  sleeping-universe.ts  star-discovery.ts  star-shapes.ts  types.ts
(+9 files in other folders)
