[package]
name = "tokenova"
version = "0.1.0"
description = "AI 코딩 토큰을 매일 새 우주의 별과 행성으로 시각화하는 트레이 앱"
authors = ["junki.ahn"]
edition = "2021"

[lib]
name = "tokenova_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Phase B: storage + file watching + time + async
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
notify = "6"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
anyhow = "1"

# Phase C: deterministic RNG for universe/star/planet generation
rand = "0.8"
rand_pcg = "0.3"

[dev-dependencies]
approx = "0.5"
